# aural

./: .gitignore  .travis.yml  Aural.html  README.markdown  aural.cabal  aural.haddock  aural.txt  doc-index.html  index.html
source/executable/: Main.hs
source/test/: Main.hs
src/: Aural.html
