cabal-version: 2.4

name: aural
version: 0.0.0.0

category: Serialization
description: Aural parses and generates Rocket League replays.
extra-source-files: README.markdown
license: ISC
license-file: LICENSE.markdown
maintainer: Taylor Fausak
synopsis: Parse and generate Rocket League replays.

library
  build-depends: base ^>= 4.12.0
  default-language: Haskell2010
  exposed-modules: Aural
  ghc-options: -Weverything -Wno-implicit-prelude -Wno-safe
  hs-source-dirs: source/library
