cabal-version: 2.4

name: aural
version: 1.0.0.0

category: Serialization
description: Aural parses and generates Rocket League replays.
extra-source-files: README.markdown
license: ISC
license-file: LICENSE.markdown
maintainer: Taylor Fausak
synopsis: Parse and generate Rocket League replays.

common basics
  build-depends:
    base ^>= 4.12.0,
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe

library
  import: basics

  autogen-modules: Paths_aural
  exposed-modules:
    Aural
    Aural.Either
    Aural.Json
    Aural.Utf8
    Aural.Version
  hs-source-dirs: source/library
  other-modules: Paths_aural

executable aural
  import: basics

  build-depends: aural
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite test
  import: basics

  build-depends: aural, hspec ^>= 2.6.1
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
